WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95395
[Chromium] The CC button is not painted
https://bugs.webkit.org/show_bug.cgi?id=95395
Summary
[Chromium] The CC button is not painted
Victor Carbune
Reported
2012-08-29 15:58:52 PDT
The actual resource for the closed caption button needs to be used and painted.
Attachments
Fix
(6.56 KB, patch)
2012-08-29 16:12 PDT
,
Victor Carbune
no flags
Details
Formatted Diff
Diff
Fixed minor issue
(6.85 KB, patch)
2012-08-30 03:20 PDT
,
Victor Carbune
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Victor Carbune
Comment 1
2012-08-29 16:12:46 PDT
Created
attachment 161348
[details]
Fix
Victor Carbune
Comment 2
2012-08-30 03:20:58 PDT
Created
attachment 161434
[details]
Fixed minor issue
Victor Carbune
Comment 3
2012-08-30 03:22:19 PDT
Comment on
attachment 161348
[details]
Fix View in context:
https://bugs.webkit.org/attachment.cgi?id=161348&action=review
> Source/WebCore/rendering/RenderMediaControlsChromium.cpp:374 > case MediaShowClosedCaptionsButton:
Sorry, this was faulty as the switch case statement above were falling through. Fixed.
Gyuyoung Kim
Comment 4
2012-08-30 03:27:39 PDT
Comment on
attachment 161434
[details]
Fixed minor issue
Attachment 161434
[details]
did not pass efl-ews (efl): Output:
http://queues.webkit.org/results/13689633
Victor Carbune
Comment 5
2012-08-30 06:16:42 PDT
(In reply to
comment #4
)
> (From update of
attachment 161434
[details]
) >
Attachment 161434
[details]
did not pass efl-ews (efl): > Output:
http://queues.webkit.org/results/13689633
Hmm, I don't think this break is caused by my patch.
Eric Carlson
Comment 6
2012-08-30 10:29:40 PDT
(In reply to
comment #5
)
> (In reply to
comment #4
) > > (From update of
attachment 161434
[details]
[details]) > >
Attachment 161434
[details]
[details] did not pass efl-ews (efl): > > Output:
http://queues.webkit.org/results/13689633
> Hmm, I don't think this break is caused by my patch.
I agree. Clearing cq-.
WebKit Review Bot
Comment 7
2012-08-30 11:52:38 PDT
Comment on
attachment 161434
[details]
Fixed minor issue Clearing flags on attachment: 161434 Committed
r127168
: <
http://trac.webkit.org/changeset/127168
>
WebKit Review Bot
Comment 8
2012-08-30 11:52:41 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug