[Chromium] The CC button is not painted https://bugs.webkit.org/show_bug.cgi?id=95395

Reviewed by Eric Carlson.

Source/WebCore:

The actual Chromium resource for the CC button was not used by the Chromium theme.

Existing track rendering tests will be rebaselined and contain the new CC button.

* rendering/RenderMediaControlsChromium.cpp:
(WebCore::paintMediaClosedCaptionsButton): Added for proper painting of the resource.
(WebCore):
(WebCore::RenderMediaControlsChromium::paintMediaControlsPart):
Changed to call paintMediaClosedCaptionsButton when the control is the CC button.
* rendering/RenderThemeChromiumSkia.cpp:
(WebCore::RenderThemeChromiumSkia::paintMediaToggleClosedCaptionsButton):
Implemented proper behaviour.
(WebCore):
* rendering/RenderThemeChromiumSkia.h:
(RenderThemeChromiumSkia):

LayoutTests:

No new tests, the existing ones will need to be rebaselined and include the CC button.

* platform/chromium/TestExpectations: Marked tests failing accordingly for rebaselining.


Canonical link: https://commits.webkit.org/113339@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127168 268f45cc-cd09-0410-ab3c-d52691b4dbfc